Bug 308894 - Send message shortcut missing in the shortcut dialog
Summary: Send message shortcut missing in the shortcut dialog
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: 0.5.1
Platform: unspecified Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2012-10-23 18:14 UTC by Julius Schwartzenberg
Modified: 2013-03-01 14:53 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Julius Schwartzenberg 2012-10-23 18:14:44 UTC
I'm trying to change the shortcut to send a message to ctrl+enter, but this shortcut is missing in the shortcut list (when you click Settings -> Shortcuts).

This seems an oversight as this list is very complete otherwise (it even allows settng a shortcut for "About KDE").
Comment 1 Martin Klapetek 2013-01-15 22:42:18 UTC
I'm marking this as a junior job. Adding the custom shortcut should be fairly easy with adding a KAction that will have a shortcut set on it plus setConfigurable(true). The KAction triggered() signal should be connected to the slot that is called from the current keyPressEvent. The tricky part is figuring out how to disable the enter key when there is a custom shortcut for this action. One possible solution could be checking if that KAction has a shortcut or not - if yes, don't send the message with enter key.
Comment 2 Roman 2013-03-01 14:53:14 UTC
Git commit baf176a92a7025f938731cc5814d934ee0a8a76e by Roman Nazarenko.
Committed on 01/03/2013 at 15:13.
Pushed by romann into branch 'master'.

Send Message shortcut is now configurable

REVIEW: 109202

M  +12   -1    app/chat-window.cpp
M  +1    -0    app/chat-window.h
M  +35   -11   lib/chat-text-edit.cpp
M  +4    -0    lib/chat-text-edit.h

http://commits.kde.org/telepathy-text-ui/baf176a92a7025f938731cc5814d934ee0a8a76e