Send Message shortcut is now configurable

REVIEW: 109202
BUG: 308894